--- a/Zelda/My Project/Resources.resx
+++ b/Zelda/My Project/Resources.resx
@@ -118,26 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ic_deletar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_deletar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ic_salvar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_salvar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ic_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_backgroud" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_backgroud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ic_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_backgroud" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_backgroud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_include" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_include.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_salvar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_salvar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ic_atualizar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_atualizar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_blue_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_deletar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_deletar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_delete1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_delete1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ic_pesquisar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_pesquisar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,7 +157,13 @@
   <data name="ic_pesquisar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_pesquisar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_delete1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_delete1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_blue_cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_blue_confirm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_confirm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_blue_trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
