--- a/Zelda/My Project/Resources.resx
+++ b/Zelda/My Project/Resources.resx
@@ -121,6 +121,9 @@
   <data name="ic_backgroud" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_backgroud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ic_blue_trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ic_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,7 +166,7 @@
   <data name="ic_blue_confirm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_blue_confirm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_blue_trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_blue_trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ic_home" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_home.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
