--- a/Zelda/My Project/Resources.resx
+++ b/Zelda/My Project/Resources.resx
@@ -133,11 +133,17 @@
   <data name="ic_include" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_include.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ic_backgroud1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_backgroud.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ic_trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ic_salvar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_salvar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_back" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_back2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ic_atualizar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_atualizar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,6 +160,12 @@
   <data name="ic_delete1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_delete1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ic_orcamento" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_orcamento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_blue_confirm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_blue_confirm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ic_pesquisar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_pesquisar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,10 +175,13 @@
   <data name="ic_blue_cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_blue_cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ic_blue_confirm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ic_blue_confirm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ic_home" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ic_home.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_tela" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_tela1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ic_orcamento1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ic_orcamento1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
